Add forwarder info API endpoint
